--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 class="gallery__header">Галерея</h1>
+    <div class="gallery__items" id="galleryRoot"></div>
 </body>
 </html>
